# gl3n

./: meson.build
gl3n/: linalg.d  math.d
